--- a/style.css
+++ b/style.css
@@ -1,96 +1,180 @@
+@font-face {
+  font-family: digit;
+  src: url(assests/DS-DIGIB.TTF);
+}
+
+@font-face {
+    font-family: Classic;
+    src: url("/assests/C&C\ Red\ Alert\ [LAN].ttf");
+}
+
 body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-#main{
-    background-color: cornflowerblue;
-    height: 100vh;
-    width: 100vw;
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 100vh;
+    background-color: #048384;
 }
-
 #window{
-    width: 500px;
-    height: 700px;
-    background-color: antiquewhite;
+    box-sizing: content-box;
+    width: 184px;
+    padding: 2px;
+    background-color: #c0c0c0;
     display: flex;
     flex-direction: column;
-    padding: 5px;
-    gap: 5px;
+    /* justify-content: center;    
+    align-items: center; */
+    gap: 2px;
+    
+    border-bottom: solid #797979 3px;
+    border-right: 3px solid #797979;
+    border-left: solid 3px #fffef7;
+    border-top: solid 3px #fffef7;
+
 }
 
-nav{
-    background-color: blue;
+#bar{
+    width: 180px;
+    height: 20px;
+    background: linear-gradient(to right, #000080, #1084d0);
     display: flex;
-    padding: 2px;
-    height: 35px;
     justify-content: space-between;
+    align-items: center;
+    margin: 0px;
+    padding-right: 4px;
+    font-family: Classic;
 }
 
-#navbar-right{
+#bar-left{
     display: flex;
-    justify-content: space-evenly;
+    align-items: center;
+    gap: 5px;
+    padding-left: 2px;
+}
+
+#bar-right{
+    display: flex;
     align-items: center;
 }
 
-article {
-    background-color: cadetblue;
+#window-text{
+    color: white;
+    font-weight: 400;
+}
+
+#Help{
+    text-decoration: none;
+    font-weight: 500;
+    color: black
+}
+
+#Help:hover{
+    text-decoration: underline;
+}
+
+#close-button{
+    box-sizing: content-box;
+    width: 12px;
+    height: 8px;
+    background-color: #bababa;
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 4px;
+    cursor: pointer;
+    margin-right: 0px;
+    border-bottom: solid black 2px;
+    border-right: 2px solid black;
+    border-left: solid 2px #cbd4d5;
+    border-top: solid 2px #cbd4d5;
+}
+
+#game-bar{
+    width: 170px;
+    height: 20px;
+    margin-left: 10px;
+    background-color: #c0c0c0;
     display: flex;
     justify-content: flex-start;
-    padding-left: 10px;
     gap: 10px;
-    height: 35px;
-}
-
-main{
-    background-color: blueviolet;
-    height: 630px;
-
-}
-
-#score-board{
-    height: 130px;
+    align-items: center;
+    font-family: Classic;
 }
 
 #game-board{
-    height: 500px;
-    width: 500px;
-    background-color: aqua;
+    box-sizing: border-box;
+    width: 180px;
+    border-bottom: solid #797979 4px;
+    border-right: 4px solid #797979;
+    border-left: solid 4px #fffef7;
+    border-top: solid 4px #fffef7;
+    padding:8px;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    justify-content: center;
+    align-items: center ;
+}
+    
+
+#score-board{
+    width: 152px;
+    background-color: #c0c0c0;
+    border-bottom: solid #fffef7 3px;
+    border-right: 3px solid #fffef7;
+    border-left: solid 3px #797979;
+    border-top: solid 3px #797979;
+    display: flex;
+    justify-content: space-around;
+    align-items:center;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    
+}
+
+#game-state{
+    height: 32px;
+    width: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #c0c0c0;
 }
 
-#board {
-    display: grid;
-    grid-template-columns: repeat(9,1fr);
-    grid-template-rows: repeat(9,1fr);
-    width: 450px;
-    height: 450px;
+.pressed{
+    border-bottom: solid #797979 2px;
+    border-right: 2px solid #797979;
+    border-left: solid 2px #fffef7;
+    border-top: solid 2px #fffef7;
+}
+
+#flag-count,#time{
+    font-family: digit;
+    font-size: 30px;
+    color: red;
     background-color: black;
+    border-bottom: solid #fffef7 3px;
+    border-right: 3px solid #fffef7;
+    border-left: solid 3px #797979;
+    border-top: solid 3px #797979;
+
+}
+
+#board{
+    display: grid;
+    grid-template-columns: repeat(9,16px);
+    grid-template-rows: repeat(9,16px);
+    width: 144px;
+    height: 144px;
+    margin-top: 4px;
+    background-color: grey;
     border-top: 4px solid black;
     border-left: 4px solid black;
     border-right: 4px solid whitesmoke;
     border-bottom: 4px solid whitesmoke;
-}
-
-.grid-box {
-  background-color: darkgrey;
-  color: darkgray;
-  border-top: 4px solid whitesmoke;
-  border-left: 4px solid whitesmoke;
-  border-right: 4px solid black;
-  border-bottom: 4px solid black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.box{
-    margin: 0;
-    padding: 0;
 }
