--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 @font-face {
     font-family: Classic;
-    src: url("/assests/C&C\ Red\ Alert\ [LAN].ttf");
+    src: url(assests/Classic.TTF);
 }
 
 body{
